--- a/达梦8.md
+++ b/达梦8.md
@@ -43,12 +43,14 @@ cd /home/dmdba/dm8
 ## 启动DM8
 
 ```shell
-cd /home/dmdba
-chown -R dmdba:dmgrp *
-su - dmdba
-cd dm8
-./bin/DmServiceDMSERVER start
+$ cd /home/dmdba
+$ chown -R dmdba:dmgrp *
+$ su - dmdba
+$ cd dm8
+$ ./bin/DmServiceDMSERVER start
 Starting DmServiceDMSERVER:                                [ OK ]
+$ netstat -anp | grep 5236
+tcp6       0      0 :::5236                 :::*                    LISTEN      4511/dmserver
 ```
 
 ## 调试
