--- a/达梦8.md
+++ b/达梦8.md
@@ -33,11 +33,19 @@ Please select the installer's language (E/e:English C/c:Chinese) [E/e]:C
 是否确认安装? (Y/y:是 N/n:否):y
 ```
 
-## 初始化
+## 配置实例
 
 ```shell
-cd /home/dmdba/dm8
-./bin/dminit path=/home/dmdba/dm8data
+$ cd /home/dmdba/dm8
+$ ./bin/dminit help
+$ ./bin/dminit path=/home/dmdba/dm8data
+```
+
+## 注册服务
+
+```shell
+$ cd script/root
+$ ./dm_service_installer.sh -t dmserver -dm_ini /home/dmdba/dm8data/DAMENG/dm.ini -p DMSERVER
 ```
 
 ## 启动DM8
